refocus_cmake/include/GPC3300/Fbida.h

FBIDAAPI HANDLE WINAPI DaOpen(LPCSTR);
FBIDAAPI int WINAPI DaSetBoardConfig(HANDLE, ULONG, HANDLE, LPDACALLBACK, PVOID);
FBIDAAPI int WINAPI DaSetCountEvent(HANDLE, ULONG, HANDLE, LPDACALLBACK, PVOID);
FBIDAAPI HANDLE WINAPI DaOpen(LPCTSTR);
FBIDAAPI int WINAPI DaSetBoardConfig(HANDLE, ULONG, HANDLE, LPDACALLBACK, DWORD);
FBIDAAPI int WINAPI DaSetCountEvent(HANDLE, ULONG, HANDLE, LPDACALLBACK, DWORD);
FBIDAAPI int WINAPI DaClose(HANDLE);
FBIDAAPI int WINAPI DaGetDeviceInfo(HANDLE, PDABOARDSPEC);
FBIDAAPI int WINAPI DaGetBoardConfig(HANDLE, ULONG *, ULONG *);
FBIDAAPI int WINAPI DaSetSamplingConfig(HANDLE, PDASMPLREQ);
FBIDAAPI int WINAPI DaGetSamplingConfig(HANDLE, PDASMPLREQ);
FBIDAAPI int WINAPI DaSetMode(HANDLE, PDAMODEREQ);
FBIDAAPI int WINAPI DaGetMode(HANDLE, PDAMODEREQ);
FBIDAAPI int WINAPI DaSetSamplingData(HANDLE, PVOID, ULONG);
FBIDAAPI int WINAPI DaClearSamplingData(HANDLE);
FBIDAAPI int WINAPI DaStartSampling(HANDLE, ULONG);
FBIDAAPI int WINAPI DaSyncSampling(HANDLE, ULONG);
FBIDAAPI int WINAPI DaStartFileSampling(HANDLE, LPCTSTR, ULONG, ULONG);
FBIDAAPI int WINAPI DaStopSampling(HANDLE);
FBIDAAPI int WINAPI DaGetStatus(HANDLE, ULONG *, ULONG *, ULONG *, ULONG *);
FBIDAAPI int WINAPI DaOutputDA(HANDLE, ULONG, PDASMPLCHREQ, LPVOID);
FBIDAAPI int WINAPI DaSetOutputMode(HANDLE, ULONG);
FBIDAAPI int WINAPI DaGetOutputMode(HANDLE, ULONG *);