refocus_cmake/include/GPC3300/Gpcda.h

//-----------------------------------------------------------------------------------------------
//
//		PCI-3525 External Trigger Polarity Identifier
//
//-----------------------------------------------------------------------------------------------
#define DA_START_DOWN_EDGE			1	// Start external trigger falling edge
#define DA_START_UP_EDGE			2	// Start external trigger rising edge
#define DA_STOP_DOWN_EDGE			4	// Stop external trigger falling edge
#define DA_STOP_UP_EDGE				8	// Stop external trigger rising edge
//-----------------------------------------------------------------------------------------------
//
//		Fifo Trigger Level Identifier
//
//-----------------------------------------------------------------------------------------------
#define DA_TRG_FREERUN				0		// No trigger
#define DA_TRG_EXTTRG				1		// External trigger
#define DA_TRG_ATRG					2		// Analog trigger
#define DA_TRG_SIGTIMER				3		// Interval timer
#define DA_TRG_CNT_EQ				4		// Counter equal
#define DA_TRG_Z_CLR				5		// Z clear
#define DA_TRG_AD_START				5		// Analog input start
#define DA_TRG_AD_STOP				6		// Analog input stop
#define DA_TRG_AD_PRETRG			7		// Analog input pre-trigger
#define DA_TRG_AD_POSTTRG			8		// Analog input post-trigger
#define DA_TRG_SMPLNUM				9		// Analog output stop number
#define DA_TRG_FIFO_EMPTY			10		// FIFO empty
#define DA_TRG_SYNC1				14		// Internel sync1 trigger
#define DA_TRG_SYNC2				15		// Internel sync2 trigger
#define DA_FIFORESET				0x0100	// FIFO reset
#define DA_RETRG					0x0200	// Retrigger
//-----------------------------------------------------------------------------------------------
//
//		Volume Identifier
//
//-----------------------------------------------------------------------------------------------
#define DA_ADJUST_BIOFFSET			1	// Bipolar offset calibration
#define DA_ADJUST_UNIOFFSET			2	// Unipolar offset calibration
#define DA_ADJUST_BIGAIN			3	// Bipolar gain calibration
#define DA_ADJUST_UNIGAIN			4	// Unipolar gain calibration
//-----------------------------------------------------------------------------------------------
//
//		Calibration Item Identifier
//
//-----------------------------------------------------------------------------------------------
#define DA_ADJUST_UP				1	// Increase the volume.
#define DA_ADJUST_DOWN				2	// Decrease the volume.
#define DA_ADJUST_STORE				3	// Save the present value 
                                        // to the non-volatile memory.
#define DA_ADJUST_STANDBY			4	// Place the electronic volume device into 
                                        // the standby mode.
#define DA_ADJUST_NOT_STORE			5	// Not save the value.
	
//-----------------------------------------------------------------------------------------------
//
//     Read Adjust Identifier
//
//-----------------------------------------------------------------------------------------------
#define DA_ADJUST_READ_FACTORY		1
#define DA_ADJUST_READ_USER			2
	
//-----------------------------------------------------------------------------------------------
//
//		Data Identifier
//
//-----------------------------------------------------------------------------------------------
#define DA_DATA_PHYSICAL			1	// Physical value (voltage [V], current [mA])
#define DA_DATA_BIN8				2	// 8-bit binary
#define DA_DATA_BIN12				3	// 12-bit binary
#define DA_DATA_BIN16				4	// 16-bit binary
#define DA_DATA_BIN24				5	// 24-bit binary
#define DA_DATA_BIN14				6	// 14-bit binary
//-----------------------------------------------------------------------------------------------
//
//		Data Conversion Identifier
//
//-----------------------------------------------------------------------------------------------
#define DA_CONV_SMOOTH				1	// Convert the data with interpolation.
#define DA_CONV_AVERAGE1			0x100	// Convert the data with the simple averaging.
#define DA_CONV_AVERAGE2			0x200	// Convert the data with the shifted averaging.
//-----------------------------------------------------------------------------------------------
//
//		Simultaneous Output Set Identifier
//
//-----------------------------------------------------------------------------------------------
#define DA_NORMAL_OUTPUT			1	// Not simultaneous output
#define DA_SYNC_OUTPUT				2	// Simultaneous output
//-----------------------------------------------------------------------------------------------
//
//		Error Identifier
//
//-----------------------------------------------------------------------------------------------
#define DA_ERROR_SUCCESS						0x00000000
#define DA_ERROR_NOT_DEVICE						0xC0000001
#define DA_ERROR_NOT_OPEN						0xC0000002
#define DA_ERROR_INVALID_HANDLE					0xC0000003
#define DA_ERROR_ALREADY_OPEN					0xC0000004
#define DA_ERROR_NOT_SUPPORTED					0xC0000009
#define DA_ERROR_NOW_SAMPLING					0xC0001001
#define DA_ERROR_STOP_SAMPLING					0xC0001002
#define DA_ERROR_START_SAMPLING					0xC0001003
#define DA_ERROR_SAMPLING_TIMEOUT				0xC0001004
#define DA_ERROR_INVALID_PARAMETER				0xC0001021
#define DA_ERROR_ILLEGAL_PARAMETER				0xC0001022
#define DA_ERROR_NULL_POINTER					0xC0001023
#define DA_ERROR_SET_DATA						0xC0001024
#define DA_ERROR_USED_AD						0xC0001025
#define DA_ERROR_FILE_OPEN						0xC0001041
#define DA_ERROR_FILE_CLOSE						0xC0001042
#define DA_ERROR_FILE_READ						0xC0001043
#define DA_ERROR_FILE_WRITE						0xC0001044
#define DA_ERROR_INVALID_DATA_FORMAT			0xC0001061
#define DA_ERROR_INVALID_AVERAGE_OR_SMOOTHING	0xC0001062
#define DA_ERROR_INVALID_SOURCE_DATA			0xC0001063
#define DA_ERROR_NOT_ALLOCATE_MEMORY			0xC0001081
#define DA_ERROR_NOT_LOAD_DLL					0xC0001082
#define DA_ERROR_CALL_DLL						0xC0001083
#define DA_ERROR_CALIBRATION					0xC0001084
#define DA_ERROR_USBIO_FAILED					0xC0001085
#define DA_ERROR_USBIO_TIMEOUT					0xC0001086
// -----------------------------------------------------------------------
//	Analog Output Request Condition Structure for Each Channel
// -----------------------------------------------------------------------
typedef struct {
	ULONG			ulChNo;
	ULONG			ulRange;
} DASMPLCHREQ, *PDASMPLCHREQ;
// -----------------------------------------------------------------------
//	Analog Output Request Condition Structure
// -----------------------------------------------------------------------
typedef struct {
	ULONG			ulChCount;
	DASMPLCHREQ		SmplChReq[256];
	ULONG			ulSamplingMode;
	float			fSmplFreq;
	ULONG			ulSmplRepeat;
	ULONG			ulTrigMode;
	ULONG			ulTrigPoint;
	ULONG			ulTrigDelay;
	ULONG			ulEClkEdge;
	ULONG			ulTrigEdge;
	ULONG			ulTrigDI;
} DASMPLREQ, *PDASMPLREQ;
// -----------------------------------------------------------------------
//	Board Specification Structure
// -----------------------------------------------------------------------
typedef struct {
	ULONG			ulBoardType;
	ULONG			ulBoardID;
	ULONG			ulSamplingMode;
	ULONG			ulChCount;
	ULONG			ulResolution;
	ULONG			ulRange;
	ULONG			ulIsolation;
	ULONG			ulDi;
	ULONG			ulDo;
} DABOARDSPEC, *PDABOARDSPEC;
// -----------------------------------------------------------------------
//	Output Range Configurations Structure for Each Channel (for the PCI/PAZ-3305)
// -----------------------------------------------------------------------
typedef struct {
	ULONG		ulRange;
	float		fVolt;
	ULONG		ulFilter;
} DAMODECHREQ, *PDAMODECHREQ;
// -----------------------------------------------------------------------
//	Waveform Generation Mode Structure (for the PCI/PAZ-3305)
// -----------------------------------------------------------------------
typedef struct {
	DAMODECHREQ		ModeChReq[2];
	ULONG			ulPulseMode;
	ULONG			ulSyntheOut;
	ULONG			ulInterval;
	float			fIntervalCycle;
	ULONG			ulCounterClear;
	ULONG			ulDaLatch;
	ULONG			ulSamplingClock;
	ULONG			ulExControl;
	ULONG			ulExClock;
} DAMODEREQ, *PDAMODEREQ;
// -----------------------------------------------------------------------
//	Fifo Analog Output Request Condition Structure (for the PCI-3525)
// -----------------------------------------------------------------------
typedef struct {
	ULONG			ulChCount;
	DASMPLCHREQ	SmplChReq[256];
	float			fSmplFreq;
	ULONG			ulSmplRepeat;
	ULONG			ulSmplNum;
	ULONG			ulStartTrigCondition;
	ULONG			ulStopTrigCondition;
	ULONG			ulEClkEdge;
	ULONG			ulTrigEdge;
} DAFIFOREQ, *PDAFIFOREQ;