refocus_cmake/include/GPC3300/FbiDa.bas


'-----------------------------------------------------------------------------------------------
'
'   PCI-3525 External Trigger Polarity Identifier
'
'-----------------------------------------------------------------------------------------------
Public Const DA_START_DOWN_EDGE = 1           ' Start external trigger falling edge
Public Const DA_START_UP_EDGE = 2             ' Start external trigger rising edge
Public Const DA_STOP_DOWN_EDGE = 4            ' Stop external trigger falling edge
Public Const DA_STOP_UP_EDGE = 8              ' Stop external trigger rising edge

'-----------------------------------------------------------------------------------------------
'
'   Fifo Trigger Level Identifier
'
'-----------------------------------------------------------------------------------------------
Public Const DA_TRG_FREERUN = 0               ' No trigger
Public Const DA_TRG_EXTTRG = 1                ' External trigger
Public Const DA_TRG_ATRG = 2                  ' Analog trigger
Public Const DA_TRG_SIGTIMER = 3              ' Interval timer
Public Const DA_TRG_CNT_EQ = 4                ' Counter equal
Public Const DA_TRG_Z_CLR  = 5		          ' Z clear
Public Const DA_TRG_AD_START = 5              ' Analog input start
Public Const DA_TRG_AD_STOP = 6               ' Analog input stop
Public Const DA_TRG_AD_PRETRG = 7             ' Analog input pre-trigger
Public Const DA_TRG_AD_POSTTRG = 8            ' Analog input post-trigger
Public Const DA_TRG_SMPLNUM = 9               ' Analog output stop number
Public Const DA_TRG_FIFO_EMPTY = 10           ' FIFO empty
Public Const DA_TRG_SYNC1 = 14                ' Internel sync1 trigger
Public Const DA_TRG_SYNC2 = 15                ' Internel sync2 trigger
Public Const DA_FIFORESET = &H100             ' FIFO reset
Public Const DA_RETRG = &H200                 ' Retrigger

'-----------------------------------------------------------------------------------------------
'
'   Simultaneous Output Set Identifier
'
'-----------------------------------------------------------------------------------------------
Public Const DA_NORMAL_OUTPUT = 1       ' Not simultaneous output
Public Const DA_SYNC_OUTPUT = 2         ' Simultaneous output

'-----------------------------------------------------------------------------------------------
'
'   Volume Identifier
'
'-----------------------------------------------------------------------------------------------
Public Const DA_ADJUST_BIOFFSET  = 1          ' Bipolar offset calibration
Public Const DA_ADJUST_UNIOFFSET = 2          ' Unipolar offset calibration
Public Const DA_ADJUST_BIGAIN    = 3          ' Bipolar gain calibration
Public Const DA_ADJUST_UNIGAIN   = 4          ' Unipolar gain calibration


'-----------------------------------------------------------------------------------------------
'
'   Calibration Item Identifier
'
'-----------------------------------------------------------------------------------------------
Public Const DA_ADJUST_UP = 1                 ' Increase the volume.
Public Const DA_ADJUST_DOWN = 2               ' Decrease the volume.
Public Const DA_ADJUST_STORE = 3              ' Save the present value to the non-volatile memory.
Public Const DA_ADJUST_STANDBY = 4            ' Place the electronic volume device into the standby mode.
Public Const DA_ADJUST_NOT_STORE = 5          ' Not save the value.


'-----------------------------------------------------------------------------------------------
'
'     Read Adjust Identifier
'
'-----------------------------------------------------------------------------------------------
Public Const DA_ADJUST_READ_FACTORY = 1      ' Factory Setting
Public Const DA_ADJUST_READ_USER = 2         ' User Setting


'-----------------------------------------------------------------------------------------------
'
'   Data Identifier
'
'-----------------------------------------------------------------------------------------------
Public Const DA_DATA_PHYSICAL = 1             ' Physical value (voltage [V], current [mA])
Public Const DA_DATA_BIN8 = 2                 ' 8-bit binary
Public Const DA_DATA_BIN12 = 3                ' 12-bit binary
Public Const DA_DATA_BIN16 = 4                ' 16-bit binary
Public Const DA_DATA_BIN24 = 5                ' 24-bit binary
Public Const DA_DATA_BIN14 = 6                ' 14-bit binary

'-----------------------------------------------------------------------------------------------
'
'   Data Conversion Identifier
'
'-----------------------------------------------------------------------------------------------
Public Const DA_CONV_SMOOTH = 1               ' Convert the data with interpolation.
Public Const DA_CONV_AVERAGE1 = &H100         ' Convert the data with the simple averaging.
Public Const DA_CONV_AVERAGE2 = &H200         ' Convert the data with the shifted averaging.

'-----------------------------------------------------------------------------------------------
'
'   Error Identifier
'
'-----------------------------------------------------------------------------------------------
Public Const DA_ERROR_SUCCESS = 0
Public Const DA_ERROR_NOT_DEVICE = &HC0000001
Public Const DA_ERROR_NOT_OPEN = &HC0000002
Public Const DA_ERROR_INVALID_HANDLE = &HC0000003
Public Const DA_ERROR_ALREADY_OPEN = &HC0000004
Public Const DA_ERROR_NOT_SUPPORTED = &HC0000009
Public Const DA_ERROR_NOW_SAMPLING = &HC0001001
Public Const DA_ERROR_STOP_SAMPLING = &HC0001002
Public Const DA_ERROR_START_SAMPLING = &HC0001003
Public Const DA_ERROR_SAMPLING_TIMEOUT = &HC0001004
Public Const DA_ERROR_INVALID_PARAMETER = &HC0001021
Public Const DA_ERROR_ILLEGAL_PARAMETER = &HC0001022
Public Const DA_ERROR_NULL_POINTER = &HC0001023
Public Const DA_ERROR_SET_DATA = &HC0001024
Public Const DA_ERROR_USED_AD = &HC0001025
Public Const DA_ERROR_FILE_OPEN = &HC0001041
Public Const DA_ERROR_FILE_CLOSE = &HC0001042
Public Const DA_ERROR_FILE_READ = &HC0001043
Public Const DA_ERROR_FILE_WRITE = &HC0001044
Public Const DA_ERROR_INVALID_DATA_FORMAT = &HC0001061
Public Const DA_ERROR_INVALID_AVERAGE_OR_SMOOTHING = &HC0001062
Public Const DA_ERROR_INVALID_SOURCE_DATA = &HC0001063
Public Const DA_ERROR_NOT_ALLOCATE_MEMORY = &HC0001081
Public Const DA_ERROR_NOT_LOAD_DLL = &HC0001082
Public Const DA_ERROR_CALL_DLL = &HC0001083
Public Const DA_ERROR_CALIBRATION = &HC0001084
Public Const DA_ERROR_USBIO_FAILED = &HC0001085
Public Const DA_ERROR_USBIO_TIMEOUT = &HC0001086


'-------------------------------------------------------------------------------------------
'
'   Structure Declaration
'
'-------------------------------------------------------------------------------------------

' -----------------------------------------------------------------------
'  Analog Output Request Condition Structure for Each Channel
' -----------------------------------------------------------------------
Type DASMPLCHREQ
    ulChNo As Long
    ulRange As Long
End Type

' -----------------------------------------------------------------------
'  Analog Output Request Condition Structure
' -----------------------------------------------------------------------
Type DASMPLREQ
    ulChCount As Long
    SmplChReq(0 To 255) As DASMPLCHREQ
    ulSamplingMode As Long
    fSmplFreq As Single
    ulSmplRepeat As Long
    ulTrigMode As Long
    ulTrigPoint As Long
    ulTrigDelay As Long
    ulEClkEdge As Long
    ulTrigEdge As Long
    ulTrigDI As Long
End Type

' -----------------------------------------------------------------------
'  Board Specification Structure
' -----------------------------------------------------------------------
Type DABOARDSPEC
    ulBoardType As Long
    ulBoardID As Long
    ulSamplingMode As Long
    ulChCount As Long
    ulResolution As Long
    ulRange As Long
    ulIsolation As Long
    ulDi As Long
    ulDo As Long
End Type

' -----------------------------------------------------------------------
'  Output Range Configurations Structure for Each Channel (for the PCI/PAZ-3305)
' -----------------------------------------------------------------------
Type DAMODECHREQ
    ulRange As Long
    fVolt As Single
    ulFilter As Long
End Type

' -----------------------------------------------------------------------
'  Waveform Generation Mode Structure (for the PCI/PAZ-3305)
' -----------------------------------------------------------------------
Type DAMODEREQ
    ModeChReq(0 To 1) As DAMODECHREQ
    ulPulseMode As Long
    ulSyntheOut As Long
    ulInterval As Long
    fIntervalCycle As Single
    ulCounterClear As Long
    ulDaLatch As Long
    ulSamplingClock As Long
    ulExControl As Long
    ulExClock As Long
End Type

' -----------------------------------------------------------------------
'  Fifo Analog Output Request Condition Structure (for the PCI-3525)
' -----------------------------------------------------------------------
Type DAFIFOREQ
    ulChCount As Long
    SmplChReq(0 To 255) As DASMPLCHREQ
    fSmplFreq As Single
    ulSmplRepeat As Long
    ulSmplNum As Long
    ulStartTrigCondition As Long
    ulStopTrigCondition As Long
    ulEClkEdge As Long
    ulTrigEdge As Long
End Type


'-------------------------------------------------
'
'   Function Declaration
'
'-------------------------------------------------
Declare Function DaOpen Lib "FbiDa.DLL" (ByVal lpszName As String) As Long
Declare Function DaClose Lib "FbiDa.DLL" (ByVal hDeviceHandle As Long) As Long

Declare Function DaGetDeviceInfo Lib "FbiDa.DLL" (ByVal hDeviceHandle As Long, ByRef pDaBoardSpec As DABOARDSPEC) As Long

Declare Function DaSetBoardConfig Lib "FbiDa.DLL" (ByVal hDeviceHandle As Long, ByVal ulSmplBufferSize As Long, ByVal hEvent As Long, ByVal lpCallBackProc As Long, ByVal dwUser As Long) As Long
Declare Function DaSetCountEvent Lib "FbiDa.DLL" (ByVal hDeviceHandle As Long, ByVal ulEventNum As Long, ByVal hEvent As Long, ByVal lpCallBackProc As Long, ByVal dwUser As Long) As Long
Declare Function DaGetBoardConfig Lib "FbiDa.DLL" (ByVal hDeviceHandle As Long, ByRef ulSmplBufferSize As Long, ByRef ulDaSmplEventFactor As Long) As Long

Declare Function DaSetSamplingConfig Lib "FbiDa.DLL" (ByVal hDeviceHandle As Long, ByRef pDaSmplConfig As DASMPLREQ) As Long
Declare Function DaGetSamplingConfig Lib "FbiDa.DLL" (ByVal hDeviceHandle As Long, ByRef pDaSmplConfig As DASMPLREQ) As Long

Declare Function DaSetMode Lib "FbiDa.DLL" (ByVal hDeviceHandle As Long, ByRef pDaMode As DAMODEREQ) As Long
Declare Function DaGetMode Lib "FbiDa.DLL" (ByVal hDeviceHandle As Long, ByRef pDaMode As DAMODEREQ) As Long

Declare Function DaSetSamplingData Lib "FbiDa.DLL" (ByVal hDeviceHandle As Long, ByRef pSmplData As Any, ByVal ulSmplDataNum As Long) As Long
Declare Function DaClearSamplingData Lib "FbiDa.DLL" (ByVal hDeviceHandle As Long) As Long

Declare Function DaStartSampling Lib "FbiDa.DLL" (ByVal hDeviceHandle As Long, ByVal ulSyncFlag As Long) As Long
Declare Function DaStartFileSampling Lib "FbiDa.DLL" (ByVal hDeviceHandle As Long, ByVal pszPathName As String, ByVal ulFileFlag As Long, ByVal ulSmplNum As Long) As Long
Declare Function DaSyncSampling Lib "FbiDa.DLL" (ByVal hDeviceHandle As Long, ByVal ulMode As Long) As Long
Declare Function DaStopSampling Lib "FbiDa.DLL" (ByVal hDeviceHandle As Long) As Long

Declare Function DaGetStatus Lib "FbiDa.DLL" (ByVal hDeviceHandle As Long, ByRef ulDaSmplStatus As Long, ByRef ulDaSmplCount As Long, ByRef ulDaAvailCount As Long, ByRef ulDaAvailRepeat As Long) As Long

Declare Function DaGetOutputMode Lib "FbiDa.DLL" (ByVal hDeviceHandle As Long, ByRef ulMode As Long) As Long
Declare Function DaSetOutputMode Lib "FbiDa.DLL" (ByVal hDeviceHandle As Long, ByVal ulMode As Long) As Long

Declare Function DaOutputDA Lib "FbiDa.DLL" (ByVal hDeviceHandle As Long, ByVal nCh As Long, ByRef pDaSmplChReq As DASMPLCHREQ, ByRef pData As Any) As Long
